# sample-project

./: API.json
artifacts/: coqbuild  coqsrc
coq/: Contract.opam  _CoqProject  dune  dune-project
